edited the html file

--- a/pure_js_fcc/dragon fight game/index.html
+++ b/pure_js_fcc/dragon fight game/index.html
@@ -19,7 +19,12 @@
                     <button id="button3">Fight dragon</button>
                 </div>
 
-                <div id="monsterStats"></div>
+                <div id="monsterStats">
+                    <div class="stats">
+                        <span class=""stat>Monster Name: <strong><span id="monsterName"></span></strong></span>
+                        <span class=""stat>Health: <strong><span id="monsterhealth"></span></strong></span>
+                    </div>
+                </div>
                 <div id="text"></div>
         </div>
 
