added a stylesheet for styling the html

--- a/pure_js_fcc/dragon fight game/index.html
+++ b/pure_js_fcc/dragon fight game/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf8">
         <meta name="viewport" content="width=width-device, initial-scale=1.0">
         <title>Dragon Fight Game</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
@@ -25,7 +26,9 @@
                         <span class=""stat>Health: <strong><span id="monsterhealth"></span></strong></span>
                     </div>
                 </div>
-                <div id="text"></div>
+                <div id="text">
+                    Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. You are in the town square. Where do you want to go? Use the buttons above.
+                </div>
         </div>
 
     </body>
