added the weapons object!

--- a/pure_js_fcc/dragon fight game/index.html
+++ b/pure_js_fcc/dragon fight game/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">    
     <head>
-        <meta charset="utf8">
-        <meta name="viewport" content="width=width-device, initial-scale=1.0">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dragon Fight Game</title>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -12,7 +12,7 @@
                 <div id="stats">
                     <span class="stat">XP: <strong><span id=""xpText>0</span></strong></span>
                     <span class="stat">Health: <strong><span id=""healthText>100</span></strong></span>
-                    <span class="stat">Gold: <strong><span id=""goldText>50</span></strong></span>
+                    <span class="stat">Gold: <strong><span id="goldText">50</span></strong></span>
                 </div>
                 <div id="controls">
                     <button id="button1">Go to store</button>
